--- a/styles/custom-page.css
+++ b/styles/custom-page.css
@@ -3,14 +3,15 @@
 }
 #page-wrap .images-wrap {
   pointer-events: none;
+  padding: 25px;
 }
 #page-wrap .images-wrap img {
   max-width: 100%;
 }
 #page-wrap .white-card {
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 25px;
+  top: 25px;
   background: #fff;
   padding: 10px 25px;
   border: 1px solid #333;
