--- a/styles/custom-page.css
+++ b/styles/custom-page.css
@@ -1,9 +1,38 @@
+.map-wrapper {
+  position: relative;
+}
+
+.map-container, #map {
+  width: 100%;
+  height: 900px;
+}
+
+#search-box {
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  width: 240px;
+  height: 32px;
+  padding: 0 12px;
+  border-radius: 3px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+  outline: none;
+  position: absolute;
+  left: 50%;
+  margin-left: -120px;
+  z-index: 10000000000000;
+}
+
 #page-wrap {
   min-height: calc(100vh - 100px);
+}
+#page-wrap #images-wrap {
+  border: 1px solid #333;
 }
 #page-wrap .images-wrap {
   pointer-events: none;
   padding: 25px;
+  width: 100%;
 }
 #page-wrap .images-wrap img {
   max-width: 100%;
